did some changes